Updated services acc to user model
