# backend/typescript/middlewares/validators/userValidators.ts
@@ -6,6 +6,9 @@ export const createUserDtoValidator = async (
   res: Response,
   next: NextFunction,
 ) => {
+  if (!validatePrimitive(req.body.authId, "string")) {
+    return res.status(400).send(getApiValidationError("authId", "string"));
+  }
   if (!validatePrimitive(req.body.firstName, "string")) {
     return res.status(400).send(getApiValidationError("firstName", "string"));
   }
@@ -15,11 +18,15 @@ export const createUserDtoValidator = async (
   if (!validatePrimitive(req.body.email, "string")) {
     return res.status(400).send(getApiValidationError("email", "string"));
   }
-  if (!validatePrimitive(req.body.role, "string")) {
-    return res.status(400).send(getApiValidationError("role", "string"));
+  if (req.body.roleType !== "Admin" || req.body.roleType !== "Member" || 
+      req.body.roleType !== "Author") {
+    return res.status(400).send(getApiValidationError("roleType", "Role"));
   }
   if (!validatePrimitive(req.body.password, "string")) {
     return res.status(400).send(getApiValidationError("password", "string"));
+  }
+  if (!validatePrimitive(req.body.active, "boolean")) {
+    return res.status(400).send(getApiValidationError("active", "boolean"));
   }
 
   return next();
@@ -30,6 +37,9 @@ export const updateUserDtoValidator = async (
   res: Response,
   next: NextFunction,
 ) => {
+  if (!validatePrimitive(req.body.authId, "string")) {
+    return res.status(400).send(getApiValidationError("authId", "string"));
+  }
   if (!validatePrimitive(req.body.firstName, "string")) {
     return res.status(400).send(getApiValidationError("firstName", "string"));
   }
@@ -39,8 +49,12 @@ export const updateUserDtoValidator = async (
   if (!validatePrimitive(req.body.email, "string")) {
     return res.status(400).send(getApiValidationError("email", "string"));
   }
-  if (!validatePrimitive(req.body.role, "string")) {
-    return res.status(400).send(getApiValidationError("role", "string"));
+  if (req.body.roleType !== "Admin" || req.body.roleType !== "Member" || 
+      req.body.roleType !== "Author") {
+    return res.status(400).send(getApiValidationError("roleType", "Role"));
+  }
+  if (!validatePrimitive(req.body.active, "boolean")) {
+    return res.status(400).send(getApiValidationError("active", "boolean"));
   }
   return next();
 };
