# backend/typescript/swagger.yml
@@ -363,18 +363,18 @@ paths:
           description: Invalid request
                   
                 
-  /auth/logout/{userid}:
+  /auth/logout/{id}:
     post:
       security:
         - bearerAuth: []
       parameters:
         - in: path
-          name: userid
+          name: id
           required: true
           schema:
             # type: integer (postgres)
             # minimum: 1
-            type: string
+            type: integer
           description: The user ID
       tags:
         - Auth
@@ -416,11 +416,11 @@ paths:
         - bearerAuth: []
       parameters:
         - in: query
-          name: userId
+          name: id
           schema:
             # type: integer (postgres)
             # minimum: 1
-            type: string
+            type: integer
           description: The user ID
         - in: query
           name: email
@@ -440,9 +440,11 @@ paths:
                 items:
                   type: object
                   required:
-                      - id, firstName, lastName, email, role
+                      - id, authId, firstName, lastName, email, roleType, active
                   properties:
                     id:
+                      type: integer
+                    authId:
                       type: string
                     firstName:
                       type: string
@@ -450,8 +452,12 @@ paths:
                       type: string
                     email:
                       type: string
-                    role:
+                    roleType:
                       type: string
+                      enum: ["Admin", "Member", "Author"]
+                    active:
+                      type: boolean
+                    
         '400':
           description: Cannot query by both user and email
         '401':
@@ -473,15 +479,15 @@ paths:
             schema:
               type: object
               required:
-                - firstName, lastName, role, email
+                - firstName, lastName, roleType, email
               properties:
                 firstName:
                   type: string
                 lastName:
                   type: string
-                role:
+                roleType:
                   type: string
-                  enum: ["User", "Admin"]
+                  enum: ["Admin", "Member", "Author"]
                 email:
                   type: string
       responses:
@@ -492,9 +498,11 @@ paths:
               schema:
                 type: object
                 required:
-                    - id, firstName, lastName, email, role
+                    - id, authId, firstName, lastName, email, roleType, active
                 properties:
                   id:
+                    type: string
+                  authId:
                     type: string
                   firstName:
                     type: string
@@ -502,8 +510,11 @@ paths:
                     type: string
                   email:
                     type: string
-                  role:
+                  roleType:
                     type: string
+                    enum: ["Admin", "Member", "Author"]
+                  active:
+                    type: boolean
         '401':
           description: Unauthorized
         '500':
@@ -515,11 +526,11 @@ paths:
         - bearerAuth: []
       parameters:
         - in: query
-          name: userId
+          name: id
           schema:
             # type: integer (postgres)
             # minimum: 1
-            type: string
+            type: integer
           description: The user ID
         - in: query
           name: email
@@ -540,18 +551,18 @@ paths:
           description: Invalid request
 
                 
-  /users/{userId}:
+  /users/{id}:
     put:
       security:
         - bearerAuth: []
       parameters:
         - in: path
-          name: userId
+          name: id
           required: true
           schema:
             # type: integer (postgres)
             # minimum: 1
-            type: string
+            type: integer
           description: The user ID
       tags:
         - User
@@ -563,7 +574,7 @@ paths:
             schema:
               type: object
               required:
-                - firstName, lastName, role, email
+                - firstName, lastName, roleType, email
               properties:
                 firstName:
                   type: string
@@ -571,7 +582,7 @@ paths:
                   type: string
                 role:
                   type: string
-                  enum: ["User", "Admin"]
+                  enum: ["Admin", "Member", "Author"]
                 email:
                   type: string
       responses:
@@ -582,9 +593,11 @@ paths:
               schema:
                 type: object
                 required:
-                    - id, firstName, lastName, email, role
+                    - id, authId, firstName, lastName, email, roleType, active
                 properties:
                   id:
+                    type: integer
+                  authId:
                     type: string
                   firstName:
                     type: string
@@ -592,8 +605,11 @@ paths:
                     type: string
                   email:
                     type: string
-                  role:
+                  roleType:
                     type: string
+                    enum: ["Admin", "Member", "Author"]
+                  active:
+                    type: boolean
         '401':
           description: Unauthorized
         '500':
